--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.17",
     "moment": "^2.29.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.18"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
