--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon bin/server"
+    "dev": "nodemon bin/server"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,9 @@
     "knex": "^0.21.17",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
-    "nodemailer": "^6.4.18"
+    "nodemailer": "^6.4.18",
+    "pg": "^8.5.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
